--- a/index.html
+++ b/index.html
@@ -399,21 +399,21 @@
                     <div class="owl-carousel testimonial-carousel">
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">Maayo jud ni siya nga pagkatawo si Vic. Bangis sa mekanikal nya maynta mopadayon ra ni siya despite the challenges. We'll celebrate small victories in life.</h4>
+                            <h4 class="font-weight-light mb-4">Maayo jud ni siya nga pagkatawo si Vic. Bangis sa mekanikal nya maynta mopadayon ra ni siya despite the challenges. Congrats Vic!.</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testi-0.png" style="width: 80px; height: 80px;">
                             <h5 class="font-weight-bold m-0">Sean Larena</h5>
                             <span>Profession</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">Si Vic jud ako pinakauna nga nafriend sa BSME. Thankful kaayo ko sa amoa friendship. Hopefully madma gaan kag kapiskay sa panglawas ni Lord.</h4>
+                            <h4 class="font-weight-light mb-4">Si Vic jud ako pinakauna nga nafriend sa BSME. Thankful kaayo ko sa amoa friendship. Vic's is also a good leader, member, and colleague. Hopefully madma gaan kag kapiskay sa panglawas ni Lord.</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testi-1.jpg" style="width: 80px; height: 80px;">
                             <h5 class="font-weight-bold m-0">Jojules Basan</h5>
                             <span>Profession</span>
                         </div>
                         <div class="text-center">
                             <i class="fa fa-3x fa-quote-left text-primary mb-4"></i>
-                            <h4 class="font-weight-light mb-4">Salamat Madam, sana maging healthy ka na. Naa rami kanunay, panghagad ra</h4>
+                            <h4 class="font-weight-light mb-4">Salamat Madam, sana maging healthy ka na. Thank you sa tanang gitabang nimo to accomplish our tasks and projects sa ato kurso. Naa rami kanunay, panghagad ra</h4>
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/testi-2.jpg" style="width: 80px; height: 80px;">
                             <h5 class="font-weight-bold m-0">Jade Bryll Cebrian</h5>
                             <span>Profession</span>
